  * (improvement) table cells linked to a modulator have a thicker border
  * (improvement) glow effect when the virtual keyboard is focused with ctrl+K
  * (improvement) EQ values automatically stored and loaded on startup
  * (improvement) highlight a modulator corresponding to a cell and vice versa
  * (improvement) the displayed period limits are written in the sample graph
  * (fix) crash with a drag & drop in the tree
  * (fix) release bug when using loop + end mode
  * (fix) the progress bar sometimes remains when loading a small soundfont
  * (fix) a double-click in the tree didn't expand or collapse the elements
  * (fix) a same file could be loaded twice on windows
  * (fix) sometimes the loop cell couldn't be edited with the mouse
  * (fix) wrong modulators were sometimes displayed after a selection in the tree

 -- Davy Triponney <davy.triponney@gmail.com>  Wed, 16 Nov 2017 17:51:55 +0100


polyphone (1.8) UNRELEASED; urgency=low

  * (new) light and dark color themes
  * (new) czech translation
  * (new) links to the online manual & forum
  * (new) tool to call an external editor for samples
  * (improvement) tool "normalize volume" replaced by "change volume" 
  * (improvement) tools "remove whistling" and "brickwall filter" replaced by "filter frequencies" 
  * (improvement) the attenuation tool can now deal with global parameters and presets 
  * (improvement) using space or enter over a cell makes it editable
  * (improvement) ctrl-x can be used in the tables
  * (improvement) double-clicking on a division go to the corresponding sample or instrument
  * (improvement) logo changed
  * (improvement) translation files can be outside the executable
  * (fix) behaviour of the duplication tool when using several velocity ranges
  * (fix) a progress dialog was displayed when opening the software
  * (fix) natural order in the tree and tables
  * (fix) behaviour of the "loop playback" cell in the tables
